@@ -32,7 +32,7 @@ instead (see below for details).
 </dd>
 </dl>
 
-__DOWNLOAD_INFO__(`3.0.3', `10 Oct 2008', `3.1.52', `9 Feb 2009')
+__DOWNLOAD_INFO__(`3.0.3', `10 Oct 2008', `3.1.54', `7 Mar 2009')
 </div>
 
 <blockquote class="note">
